[package]
name = "iroh-node-util"
description = "Utilities to build binaries containing an iroh endpoint"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.29.0"
edition = "2021"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-node-util"
keywords = ["quic", "networking", "holepunching", "p2p"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.81"

[lints.rust]
missing_debug_implementations = "warn"

# We use this --cfg for documenting the cargo features on which an API
# is available.  To preview this locally use: RUSTFLAGS="--cfg
# iroh_docsrs cargo +nightly doc --all-features".  We use our own
# iroh_docsrs instead of the common docsrs to avoid also enabling this
# feature in any dependencies, because some indirect dependencies
# require a feature enabled when using `--cfg docsrs` which we can not
# do.  To enable for a crate set `#![cfg_attr(iroh_docsrs,
# feature(doc_cfg))]` in the crate.
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(iroh_docsrs)"] }

[lints.clippy]
unused-async = "warn"


[dependencies]
anyhow = "1"
tokio = "1"
iroh = "0.29"
tempfile = "3"
strum = "0.26"
nested_enum_utils = "0.1.0"
quic-rpc = "0.17"
quic-rpc-derive = "0.17"
rand = "0.8"
serde = "1"
serde-error = "0.1.3"
ssh-key = { version = "0.6", features = ["ed25519"] }
futures-lite = "2.5.0"
tracing = "0.1.40"

# config
dirs-next = { version = "2.0.0", optional = true }

# logging
derive_more = { version = "1.0.0", features = ["display"], optional = true }
rustyline = { version = "12.0.0", optional = true }
serde_with = { version = "3.7.0", optional = true }
tracing-appender = { version = "0.2.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

# cli
clap = { version = "4", features = ["derive"], optional = true }
colored = { version = "2.0.4", optional = true }
comfy-table = { version = "7.0.1", optional = true }
time = { version = "0.3", features = ["formatting"], optional = true }
human-time = { version = "0.1.6", optional = true }

[features]
default = []
logging = ["dep:derive_more", "dep:serde_with", "dep:rustyline", "dep:tracing-appender", "dep:tracing-subscriber"]
config = ["dep:dirs-next"]
cli = ["dep:clap", "dep:colored", "dep:comfy-table", "dep:time", "dep:human-time"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "iroh_docsrs"]

[patch.crates-io]
iroh = { git = "https://github.com/n0-computer/iroh", branch = "main" }
